# LogiBearPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configureAndBuild.sh
cmake/: DefaultProjectLibrary.cmake
common/: CMakeLists.txt
common/cmake/: DefaultProjectLibrary.cmake
common/src/: Driver.cpp  Driver.hpp  ExampleMain.cpp  IOHandler.cpp  IOHandler.hpp  Main.cpp  ProjectConfig.hpp.in  World.cpp  World.hpp
common/template/: CMakeLists.txt  TemplateIOHandler.cpp  TemplateIOHandler.hpp  TemplateMain.cpp  TemplateWorld.cpp  TemplateWorld.hpp
projects/graphics/: CMakeLists.txt  graphics.files  graphics.includes
projects/graphics/src/: GraphicsIOHandler.cpp  GraphicsIOHandler.hpp
projects/graphics/src/common/: GraphicsConstants.hpp
projects/graphics/src/glfw/: CallbackSingleton.cpp  CallbackSingleton.hpp  GraphicsContext.hpp  GraphicsContextGLFW.cpp  GraphicsContextGLFW.hpp  GraphicsGeneratorGLFW.cpp  GraphicsGeneratorGLFW.hpp
projects/graphics/src/graphics/: GraphicsGenerator.cpp  GraphicsGenerator.hpp  GraphicsHandler.cpp  GraphicsHandler.hpp
projects/opGraphics/: CMakeLists.txt
projects/opGraphics/src/: GraphicsIOHandler.cpp  GraphicsMain.cpp  OPGraphics.cpp
projects/opGraphics/src/common/: DLLDefines.hpp.in
projects/opGraphics/src/glfw/: Callback.hpp  GraphicsGeneratorGLFW.cpp
projects/opGraphics/src/graphics/: GraphicsGenerator.cpp  GraphicsHandler.cpp  GraphicsHandler.hpp
run/: CMakeLists.txt  main.cpp  unixConfigureAndBuild.sh  winConfigureAndBuild.cmd
src/: Main.cpp  ProjectConfig.hpp.in  Renderer.cpp  Renderer.hpp  World.cpp  World.hpp
